fix: control sidebar left align

--- a/src/styles/themes/default/components/_table.sass
+++ b/src/styles/themes/default/components/_table.sass
@@ -22,8 +22,6 @@
     top: 0
     margin-left: -1rem
 
-.label
-    color: white
 .emptytext
     font-family: 'Nunito', Helvetica, Arial, sans-serif
     font-size: 1rem  
@@ -60,6 +58,7 @@
 .label
   font-weight: bold
   font-size: 1.4rem
+  color: white
 .form-control
   margin-bottom: 2rem
 .search-icon-open
